Fix Windows external viewer launch via shell start
On Windows, launch user-configured external file viewers through cmd.exe /c start instead of starting the viewer directly from JabRef.

This avoids fragile direct child-process behavior for external viewers such as SumatraPDF. In testing with JabRef 2.11 beta, directly launching SumatraPDF from JabRef could trigger crashes after editing and saving PDF bookmarks, while manual launch and Windows default file association worked correctly.

The new launch path behaves closer to the Windows shell/default-association path, preserves compatibility with paths containing spaces, and keeps the START title placeholder and /D startup directory handling explicit.

Related historical issue: JabRef #1381, where non-default PDF viewers on Windows mishandled file paths containing blanks. :contentReference[oaicite:0]{index=0}