@@ -684,39 +684,75 @@ public class Util {
      * @throws IOException
      */
     public static void openFileOnWindows(String link, boolean localFile) throws IOException {
-        /*
-		 * if (localFile) { String[] spl = link.split("\\\\"); StringBuffer sb =
-		 * new StringBuffer(); for (int i = 0; i < spl.length; i++) { if (i > 0)
-		 * sb.append("\\"); if (spl[i].indexOf(" ") >= 0) spl[i] = "\"" + spl[i] +
-		 * "\""; sb.append(spl[i]); } link = sb.toString(); }
-         */
-        link = link.replaceAll("&", "\"&\"").replaceAll(" ", "\" \"");
-
-        // Bug fix for:
-        // http://sourceforge.net/tracker/index.php?func=detail&aid=1489454&group_id=92314&atid=600306
-        String cmd;
-        if (Globals.osName.startsWith("Windows 9")) {
-            cmd = "command.com /c start " + link;
+        if (localFile) {
+            Desktop.getDesktop().open(new File(link));
         } else {
-            cmd = "cmd.exe /c start " + link;
+            Desktop.getDesktop().browse(URI.create(link));
         }
-
-        Runtime.getRuntime().exec(cmd);
     }
 
     /**
-     * Opens a file on a Windows system, using the given application.
+     * Opens a local file with a user-configured Windows application.
      *
-     * @param link The file name.
-     * @param application Link to the app that opens the file.
-     * @throws IOException
+     * Important: do not replace this with Runtime.exec(application + " " + link)
+     * or with new ProcessBuilder(application, link).start().
+     *
+     * Older JabRef versions historically launched external viewers by building one
+     * command string. That is fragile on Windows because paths containing spaces,
+     * ampersands, quotes, or other shell-significant characters can be split or
+     * interpreted incorrectly. This class of bug was later tracked in JabRef issue
+     * #1381, where SumatraPDF received broken file paths when it was configured as
+     * a non-default PDF viewer.
+     *
+     * In this JabRef 2.x code path there is an additional compatibility problem:
+     * launching SumatraPDF directly as a child process of JabRef can expose a
+     * SumatraPDF save/reload crash after editing PDF bookmarks. The same SumatraPDF
+     * binary and the same PDF file work correctly when started manually or via the
+     * Windows default file association. Launching through "cmd.exe /c start" makes
+     * this path behave more like a normal shell/default-association launch instead
+     * of keeping SumatraPDF as a direct Java child process.
+     *
+     * The empty string after "start" is intentional. The Windows START command
+     * treats the first quoted argument as the window title. Without an explicit
+     * title placeholder, a quoted executable path such as
+     * "C:\Program Files\SumatraPDF\SumatraPDF.exe" can be parsed as the title
+     * instead of the command. The /D argument sets the startup directory explicitly.
+     *
+     * Related references:
+     * - JabRef issue #1381: file links containing blanks broken with non-default
+     *   viewer on Windows.
+     * - Later JabRef fix: replaced Runtime.exec(commandString) with structured
+     *   ProcessBuilder arguments for external viewers.
+     * - Microsoft START documentation: START has a quoted title argument and /D
+     *   specifies the startup directory.
      */
     public static void openFileWithApplicationOnWindows(String link, String application)
             throws IOException {
 
-        link = link.replaceAll("&", "\"&\"").replaceAll(" ", "\" \"");
+        File app = new File(application);
+        File dir = app.getParentFile();
 
-        Runtime.getRuntime().exec(application + " " + link);
+        if (dir != null) {
+            new ProcessBuilder(
+                    "cmd.exe",
+                    "/c",
+                    "start",
+                    "",
+                    "/D",
+                    dir.getAbsolutePath(),
+                    app.getAbsolutePath(),
+                    link
+            ).start();
+        } else {
+            new ProcessBuilder(
+                    "cmd.exe",
+                    "/c",
+                    "start",
+                    "",
+                    application,
+                    link
+            ).start();
+        }
     }
 
     /**
